spacing issues fixed

--- a/css/styles.css
+++ b/css/styles.css
@@ -23,7 +23,7 @@ h2 {
   background-size: contain;
   background-attachment: fixed;
   background-repeat: no-repeat;
-  background-position: 80% 40%;
+  background-position: 84% 40%;
   background-image: url("../images/champ.png");
   position: fixed;
 }
